--- a/client/views/index.html
+++ b/client/views/index.html
@@ -18,9 +18,9 @@
         <div layout="column" ng-cloak="" ng-controller="AppCtrl">
             <md-content>
 
-                <md-toolbar layout="row" class="md-tall md-accent docix-header">
+                <md-toolbar layout="row" class="md-tall md-accent">
 
-                    <h1 class="md-toolbar-tools ">Docix.net</h1>
+                    <h1 class="md-toolbar-tools ">Test</h1>
 
                 </md-toolbar>
             </md-content>
